classDiagram
    class PlatformAdapter {
        <<abstract>>
        +get_app_data_dir() Path
        +enable_dpi_awareness() None
        +get_virtual_screen_bounds() Tuple~int,int,int,int~
        +copy_image_to_clipboard(image: Image) None
        +read_clipboard_text() Optional~str~
        +read_clipboard_image() Optional~Tuple~str, str~~
        +read_clipboard_file_list() Optional~List~str~~
        +get_clipboard_change_count() int
        +clear_system_clipboard() None
        +register_hotkeys(hotkeys: List~HotkeyDef~) Tuple~int, List~str~~
        +unregister_hotkeys() None
        +show_tray_icon(icon_path: Optional~str~, callbacks: TrayCallbacks) bool
        +hide_tray_icon() None
        +detect_window_at_point(point: Tuple~int,int~, exclude_pids: Optional~List~int~~) Optional~Tuple~int,int,int,int~~
        +is_startup_enabled() bool
        +set_startup_enabled(enabled: bool) Optional~str~
        +reveal_path_in_finder(path: Path) None
        +get_icon_path() Optional~str~
        +get_default_hotkeys() Dict~str,str~
        +parse_hotkey_string(value: str) HotkeyDef
    }

    class WindowsAdapter {
        -_hotkey_manager: GlobalHotkeyManager
        -_tray_manager: TrayIconManager
        +get_app_data_dir() Path
        +enable_dpi_awareness() None
        +copy_image_to_clipboard(image: Image) None
        +read_clipboard_text() Optional~str~
        +read_clipboard_image() Optional~Tuple~str, str~~
        +read_clipboard_file_list() Optional~List~str~~
        +get_clipboard_change_count() int
        +clear_system_clipboard() None
        +register_hotkeys(hotkeys: List~HotkeyDef~) Tuple~int, List~str~~
        +unregister_hotkeys() None
        +show_tray_icon(icon_path, callbacks) bool
        +hide_tray_icon() None
        +detect_window_at_point(point, exclude_pids) Optional~Tuple~int,int,int,int~~
        +is_startup_enabled() bool
        +set_startup_enabled(enabled: bool) Optional~str~
        +reveal_path_in_finder(path: Path) None
        +get_icon_path() Optional~str~
        +get_default_hotkeys() Dict~str,str~
        +parse_hotkey_string(value: str) HotkeyDef
    }

    class MacOSAdapter {
        -_hotkey_listener: Optional~Listener~
        -_tray_icon: Optional~pystray.Icon~
        -_pasteboard: NSPasteboard
        -_last_change_count: int
        +get_app_data_dir() Path
        +enable_dpi_awareness() None
        +get_virtual_screen_bounds() Tuple~int,int,int,int~~
        +copy_image_to_clipboard(image: Image) None
        +read_clipboard_text() Optional~str~
        +read_clipboard_image() Optional~Tuple~str, str~~
        +read_clipboard_file_list() Optional~List~str~~
        +get_clipboard_change_count() int
        +clear_system_clipboard() None
        +register_hotkeys(hotkeys: List~HotkeyDef~) Tuple~int, List~str~~
        +unregister_hotkeys() None
        +show_tray_icon(icon_path, callbacks) bool
        +hide_tray_icon() None
        +detect_window_at_point(point, exclude_pids) Optional~Tuple~int,int,int,int~~
        +is_startup_enabled() bool
        +set_startup_enabled(enabled: bool) Optional~str~
        +reveal_path_in_finder(path: Path) None
        +get_icon_path() Optional~str~
        +get_default_hotkeys() Dict~str,str~
        +parse_hotkey_string(value: str) HotkeyDef
        -_check_accessibility_permission() bool
        -_write_launch_agent_plist(command: str) Path
        -_remove_launch_agent_plist() None
    }

    class HotkeyDef {
        +name: str
        +modifiers: str
        +key: str
        +callback: Callable
    }

    class TrayCallbacks {
        +on_show: Callable
        +on_settings: Callable
        +on_history: Callable
        +on_exit: Callable
    }

    class GlobalHotkeyManager {
        -root: tk.Tk
        -_callbacks: Dict
        -_thread: Optional~Thread~
        +register_many(hotkeys: Iterable~Hotkey~) Tuple~int, List~str~~
        +unregister_all() None
    }

    class TrayIconManager {
        -root: tk.Tk
        -_events: Queue
        +show() bool
        +hide() None
        +stop() None
    }

    PlatformAdapter <|-- WindowsAdapter
    PlatformAdapter <|-- MacOSAdapter
    WindowsAdapter *-- GlobalHotkeyManager : uses
    WindowsAdapter *-- TrayIconManager : uses
    PlatformAdapter ..> HotkeyDef : uses
    PlatformAdapter ..> TrayCallbacks : uses
